--- a/src/web/css/estilos.css
+++ b/src/web/css/estilos.css
@@ -1,4 +1,7 @@
- 
+body{
+    background-color: #022E0C;
+} 
+
 .formulario_index{
     margin-top: 12px;
 }
@@ -11,15 +14,18 @@
 }
 #formulario_registrar{
     margin: auto;
+   padding-top: 10px;
+   padding-bottom: 100px;
+   text-align: center;
 }
 #formulario_registrar>input{
     display: flex;
     text-align: center;
     margin:auto;
-    width: 30%;
+    width: 400px;
     margin-top: 10px;
     border: none;
-    background-color: none;
+    
 }
 #formulario_registrar>input:focus{
 background: #fff; 
@@ -29,11 +35,22 @@ background: #fff;
 .border{
     border-bottom: 1px dotted grey;
 }
+#provincia{
+    margin:auto;
+        margin-top: 12px;
 
+}
+select>option>p{
+    color:black;
+}
 .boton_submit{
-    width: 30%;
+    display:none;
+    color:white; 
+    background-color: #022E0C;
     height: 50px;
     border: none;
+    text-align: center;
+    border-radius: 200px;
 }
 .anuncio{
     margin-top: 20px;
@@ -46,12 +63,19 @@ background: #fff;
     /*Añadir la fuente*/
     font-family: sans-serif;
     padding: 0px;
-    padding-bottom: 20px;
+    padding-top: 10px;
     margin-bottom: 20px;
     background-color: #B8B6B8;
-    border: 8px solid #022E0C;
-    border-right: 10px solid #022E0C;
-    border-left: 10px solid #022E0C;
+   
+
+   background: rgba(240,240,240,0.88);
+background: -moz-linear-gradient(top, rgba(240,240,240,0.88) 0%, rgba(240,240,240,0.88) 5%, rgba(240,240,240,0.9) 29%, rgba(247,247,247,0.92) 60%, rgba(253,253,253,0.94) 92%, rgba(255,255,255,0.94) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(240,240,240,0.88)), color-stop(5%, rgba(240,240,240,0.88)), color-stop(29%, rgba(240,240,240,0.9)), color-stop(60%, rgba(247,247,247,0.92)), color-stop(92%, rgba(253,253,253,0.94)), color-stop(100%, rgba(255,255,255,0.94)));
+background: -webkit-linear-gradient(top, rgba(240,240,240,0.88) 0%, rgba(240,240,240,0.88) 5%, rgba(240,240,240,0.9) 29%, rgba(247,247,247,0.92) 60%, rgba(253,253,253,0.94) 92%, rgba(255,255,255,0.94) 100%);
+background: -o-linear-gradient(top, rgba(240,240,240,0.88) 0%, rgba(240,240,240,0.88) 5%, rgba(240,240,240,0.9) 29%, rgba(247,247,247,0.92) 60%, rgba(253,253,253,0.94) 92%, rgba(255,255,255,0.94) 100%);
+background: -ms-linear-gradient(top, rgba(240,240,240,0.88) 0%, rgba(240,240,240,0.88) 5%, rgba(240,240,240,0.9) 29%, rgba(247,247,247,0.92) 60%, rgba(253,253,253,0.94) 92%, rgba(255,255,255,0.94) 100%);
+background: linear-gradient(to bottom, rgba(240,240,240,0.88) 0%, rgba(240,240,240,0.88) 5%, rgba(240,240,240,0.9) 29%, rgba(247,247,247,0.92) 60%, rgba(253,253,253,0.94) 92%, rgba(255,255,255,0.94) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', endColorstr='#ffffff', GradientType=0 );
 }
 .boton{
     border: none;
@@ -65,5 +89,16 @@ background: #fff;
     padding: 2px;
     margin-top: 5px;
     border-radius: 10px;
+}
+.contenido{
+    width: 98%;
+    margin: auto;
+    background-color: white;
+}
+.separador{
+    border:2px solid #022E0C;
+}
+#texto_registro{
+    font-size: 9px;
 }
 
